--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>net.luferat</groupId>
+    <groupId>com.jonathan</groupId>
     <artifactId>cadastro_de_trecos</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
@@ -12,10 +12,12 @@
         <exec.mainClass>net.luferat.cadastro_de_trecos.Cadastro_de_trecos</exec.mainClass>
     </properties>
     <dependencies>
+       
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.42.0.0</version>
         </dependency>
+
     </dependencies>
 </project>
